--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/activity_look_feed_back.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/activity_look_feed_back.xml
@@ -33,7 +33,7 @@
             android:layout_marginRight="@dimen/kf5_dimen_8dp"
             android:gravity="center"
             android:padding="@dimen/kf5_dimen_8dp"
-            android:text="@string/kf5_connect_us"
+            android:text="@string/kf5_contact_us"
             android:textColor="@drawable/kf5_text_bg"
             android:textSize="@dimen/kf5_text_xh_size"/>
 
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/kf5_feed_back_list"
+            android:text="@string/kf5_feedback_list"
             android:textColor="@android:color/white"
             android:textSize="@dimen/kf5_text_xxh_size"/>
     </RelativeLayout>
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/kf5_no_feed_back"
+            android:text="@string/kf5_no_feedback"
             android:textColor="@color/kf5_message_value_color"
             android:visibility="gone"/>
     </FrameLayout>
