--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_dialog_manager.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_dialog_manager.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="@string/kf5_up_to_cancel"
+        android:text="@string/kf5_slide_to_cancel"
         android:textColor="#ffffffff" />
 
 </LinearLayout>
