--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_layout_chat_by_other.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_layout_chat_by_other.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
 
     <TextView
         android:id="@+id/kf5_textview_choice_from_image"
@@ -13,8 +13,8 @@
         android:drawablePadding="@dimen/kf5_dimen_4dp"
         android:drawableTop="@drawable/kf5_img_from_file"
         android:gravity="center"
-        android:text="照片"
-        android:textSize="@dimen/kf5_text_size_20" />
+        android:text="@string/kf5_from_gallery"
+        android:textSize="@dimen/kf5_text_size_20"/>
 
     <TextView
         android:id="@+id/kf5_textview_choice_from_camera"
@@ -25,7 +25,7 @@
         android:drawablePadding="@dimen/kf5_dimen_4dp"
         android:drawableTop="@drawable/kf5_img_from_camera"
         android:gravity="center"
-        android:text="相机"
-        android:textSize="@dimen/kf5_text_size_20" />
+        android:text="@string/kf5_from_camera"
+        android:textSize="@dimen/kf5_text_size_20"/>
 
 </LinearLayout>
