--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_image_left.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_image_left.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/kf5_dimen_8dp"
-    android:paddingTop="@dimen/kf5_dimen_8dp"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/kf5_dimen_8dp"
+              android:paddingTop="@dimen/kf5_dimen_8dp">
 
 
     <TextView
@@ -15,7 +16,7 @@
         android:layout_marginTop="@dimen/kf5_dimen_8dp"
         android:background="@drawable/kf5_message_item_with_date_bg"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/kf5_text_size_14" />
+        android:textSize="@dimen/kf5_text_size_14"/>
 
 
     <RelativeLayout
@@ -29,10 +30,11 @@
             android:layout_height="48dp"
             android:layout_marginLeft="@dimen/kf5_dimen_8dp"
             android:layout_marginStart="@dimen/kf5_dimen_8dp"
-            android:contentDescription="@null" />
+            android:contentDescription="@null"/>
 
         <com.kf5.sdk.im.widget.MaskImage
             android:id="@+id/kf5_message_item_with_image_content_img"
+            app:maskSource="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/kf5_message_item_with_image_head_img"
@@ -40,7 +42,6 @@
             android:layout_marginStart="@dimen/kf5_dimen_4dp"
             android:layout_toEndOf="@+id/kf5_message_item_with_image_head_img"
             android:layout_toRightOf="@+id/kf5_message_item_with_image_head_img"
-            android:contentDescription="@string/kf5_left"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"/>
     </RelativeLayout>
 </LinearLayout>
