--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_image_right.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_image_right.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
@@ -65,8 +66,8 @@
                 android:id="@+id/kf5_message_item_with_image_content_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/kf5_right"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                app:maskSource="right"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
