--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_progress_bar.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_progress_bar.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/kf5_dimen_4dp"
-            android:text="@string/kf5_load"
+            android:text="@string/kf5_loading"
             android:textColor="@android:color/white"
             android:textSize="14sp"/>
     </LinearLayout>
