--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_ai_layout.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_ai_layout.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_gravity="center_vertical"
-             android:focusable="true"
-             android:focusableInTouchMode="true"
-             android:orientation="horizontal"
-             android:padding="@dimen/kf5_dimen_4dp">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_vertical"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
+              android:orientation="horizontal"
+              android:padding="@dimen/kf5_dimen_4dp">
 
 
-        <TextView
-            android:id="@+id/kf5_ai_to_agent_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/kf5_ai_to_agent_btn_bg"
-            android:gravity="center"
-            android:text="@string/kf5_ai_to_agent"
-            android:textColor="@drawable/kf5_ai_to_agent_text_bg"
-            android:textSize="@dimen/kf5_text_size_16"/>
+    <TextView
+        android:id="@+id/kf5_ai_to_agent_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/kf5_ai_to_agent_btn_bg"
+        android:gravity="center"
+        android:text="@string/kf5_ai_to_agent"
+        android:textColor="@drawable/kf5_ai_to_agent_text_bg"
+        android:textSize="@dimen/kf5_text_size_16"/>
 
-        <com.kf5.sdk.im.keyboard.widgets.EmoticonsEditText
-            android:id="@+id/kf5_ai_text_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/kf5_dimen_4dp"
-            android:layout_marginStart="@dimen/kf5_dimen_4dp"
-            android:layout_weight="1"
-            android:background="@drawable/kf5_input_bar_bg_active"
-            android:gravity="start|center"
-            android:lineSpacingExtra="@dimen/kf5_dimen_4dp"
-            android:maxLines="5"
-            android:minHeight="40dp"
-            android:textSize="@dimen/kf5_text_size_16"/>
+    <com.kf5.sdk.im.keyboard.widgets.EmoticonsEditText
+        android:id="@+id/kf5_ai_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/kf5_dimen_4dp"
+        android:layout_marginStart="@dimen/kf5_dimen_4dp"
+        android:layout_weight="1"
+        android:background="@drawable/kf5_input_bar_bg_active"
+        android:gravity="start|center"
+        android:lineSpacingExtra="@dimen/kf5_dimen_4dp"
+        android:maxLines="5"
+        android:minHeight="40dp"
+        android:textSize="@dimen/kf5_text_size_16"/>
 
-        <TextView
-            android:id="@+id/kf5_ai_textview_send_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/kf5_dimen_4dp"
-            android:layout_marginStart="@dimen/kf5_dimen_4dp"
-            android:background="@drawable/kf5_btn_send_bg"
-            android:gravity="center"
-            android:text="发送"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/kf5_text_size_16"/>
+    <TextView
+        android:id="@+id/kf5_ai_textview_send_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/kf5_dimen_4dp"
+        android:layout_marginStart="@dimen/kf5_dimen_4dp"
+        android:background="@drawable/kf5_btn_send_bg"
+        android:gravity="center"
+        android:text="@string/kf5_send"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/kf5_text_size_16"/>
 </LinearLayout>
