--- a/kf5sdk-master-v2/app/src/main/res/layout/fragment_home_layout.xml
+++ b/kf5sdk-master-v2/app/src/main/res/layout/fragment_home_layout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="?attr/actionBarSize"
         android:layout_alignParentTop="true"
         android:background="@color/kf5_title_bar_bg">
 
@@ -15,7 +15,7 @@
             android:layout_centerInParent="true"
             android:text="@string/kf5_sdk_name"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/kf5_text_xh_size" />
+            android:textSize="@dimen/kf5_text_xh_size"/>
 
         <TextView
             android:id="@+id/login"
@@ -29,7 +29,7 @@
             android:padding="@dimen/kf5_dimen_8dp"
             android:text="@string/login"
             android:textColor="@drawable/kf5_text_bg"
-            android:textSize="@dimen/kf5_text_xh_size" />
+            android:textSize="@dimen/kf5_text_xh_size"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="欢迎使用云客服SDK示例APP"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -51,7 +51,7 @@
             android:layout_marginTop="@dimen/kf5_dimen_32dp"
             android:gravity="center"
             android:text="满足客户需求,创造客户价值."
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
     </LinearLayout>
 
 </RelativeLayout>
