--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/drawable/kf5_text_bg.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/drawable/kf5_text_bg.xml
@@ -3,7 +3,7 @@
 
     <item android:state_pressed="true" android:color="#a0a0a0"/>
     <item android:state_focused="true" android:color="#a0a0a0"/>
-    <item android:state_enabled="false" android:color="#ffffff"/>
+    <item android:state_enabled="false" android:color="#a0a0a0"/>
     <item android:color="#ffffff"/>
 
 </selector>
