--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values/color.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values/color.xml
@@ -25,4 +25,5 @@
     <color name="kf5_tool_bar_btn_bg_normal">@color/kf5_white</color>
     <color name="kf5_tool_bar_btn_bg_select">#D9D9D9</color>
     <color name="kf5_black">#000000</color>
+    <color name="kf5_rating_shape_color">#ffa700</color>
 </resources>
