--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_dialog_layout.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_dialog_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialogRoot"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/kf5_dialog_box_bg"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="16dp" >
+              android:id="@+id/dialogRoot"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/kf5_dialog_box_bg"
+              android:gravity="center_horizontal"
+              android:orientation="vertical"
+              android:padding="16dp">
 
     <TextView
         android:id="@+id/kf5_dialogTitle"
@@ -20,17 +20,18 @@
         android:textColor="#ff000000"
         android:textSize="18.0sp"
         android:textStyle="bold"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/kf5_dialogText"
         android:layout_width="@dimen/kf5_dialog_width"
-        android:layout_height="25.0dip"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:ellipsize="middle"
         android:gravity="top|start"
-        android:maxLines="2"
+        android:maxLines="3"
         android:text="Message"
         android:textColor="#ff000000"
-        android:textSize="18.0sp" />
+        android:textSize="18.0sp"/>
 
 </LinearLayout>
