--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_system.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_system.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:paddingBottom="@dimen/kf5_dimen_8dp"
-    android:paddingTop="@dimen/kf5_dimen_8dp"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/kf5_dimen_8dp"
+              android:paddingTop="@dimen/kf5_dimen_8dp">
 
 
     <TextView
@@ -15,7 +16,7 @@
         android:layout_marginTop="@dimen/kf5_dimen_8dp"
         android:background="@drawable/kf5_message_item_with_date_bg"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/kf5_text_size_14" />
+        android:textSize="@dimen/kf5_text_size_14"/>
 
     <TextView
         android:id="@+id/kf5_message_item_system"
@@ -23,8 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/kf5_dimen_16dp"
+        android:layout_marginLeft="@dimen/kf5_dimen_32dp"
+        android:layout_marginRight="@dimen/kf5_dimen_32dp"
         android:background="@drawable/kf5_message_item_with_date_bg"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/kf5_text_size_14" />
+        android:textSize="@dimen/kf5_text_size_14"/>
 
 </LinearLayout>
