--- a/kf5sdk-master-v2/app/src/main/res/layout/activity_about_us.xml
+++ b/kf5sdk-master-v2/app/src/main/res/layout/activity_about_us.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="?attr/actionBarSize"
         android:layout_alignParentTop="true"
         android:background="@color/kf5_title_bar_bg">
 
@@ -18,7 +18,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
-            android:src="@drawable/kf5_back_img_bg" />
+            android:src="@drawable/kf5_back_img_bg"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_centerInParent="true"
             android:text="@string/about_us"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/kf5_text_xh_size" />
+            android:textSize="@dimen/kf5_text_xh_size"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:contentDescription="@null"
-            android:src="@mipmap/login_logo" />
+            android:src="@mipmap/login_logo"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
             android:layout_marginTop="@dimen/kf5_dimen_16dp"
             android:text="KF5SDK"
             android:textColor="#7e7e7e"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
             android:layout_marginTop="@dimen/kf5_dimen_12dp"
             android:text="V2.0 www.kf5.com"
             android:textColor="#7e7e7e"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
     </LinearLayout>
 
 </RelativeLayout>
