SDKIM新增消息类型

--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_image_detail_fragment.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_image_detail_fragment.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@android:color/transparent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/kf5_black">
 
     <ImageView
+        android:id="@+id/kf5_image_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="#000000"/>
+
+    <com.kf5.sdk.system.photoview.PhotoView
         android:id="@+id/kf5_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:adjustViewBounds="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
     />
 
     <ProgressBar
         android:id="@+id/kf5_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:visibility="gone"/>
 
-</FrameLayout>
+</RelativeLayout>
