--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_image_detail_pager.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_image_detail_pager.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/black">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
+        <com.kf5.sdk.system.widget.CustomViewPager
             android:id="@+id/kf5_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/black" />
+            android:background="@color/kf5_black"/>
 
         <TextView
             android:id="@+id/kf5_indicator"
@@ -23,7 +23,7 @@
             android:gravity="center"
             android:text="@string/kf5_viewpager_indicator"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
     </FrameLayout>
 
 </RelativeLayout>
