--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_image_right.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_image_right.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitXY"
-                app:maskSource="right"/>
+                app:kf5_mi_maskSource="kf5_mi_right"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
