--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values/attrs.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values/attrs.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="IndicatorView">
-        <attr name="normal" format="reference"/>
-        <attr name="select" format="reference"/>
+    <declare-styleable name="KF5IndicatorView">
+        <attr name="kf5_iv_normal" format="reference"/>
+        <attr name="kf5_iv_select" format="reference"/>
     </declare-styleable>
 
-    <declare-styleable name="SwipeBackLayout">
-        <attr name="edge_size" format="dimension"/>
-        <attr name="edge_flag">
-            <enum name="left" value="0"/>
-            <enum name="right" value="1"/>
-            <enum name="bottom" value="2"/>
-            <enum name="all" value="3"/>
+    <declare-styleable name="KF5SwipeBackLayout">
+        <attr name="kf5_sbl_edge_size" format="dimension"/>
+        <attr name="kf5_sbl_edge_flag">
+            <enum name="kf5_sbl_left" value="0"/>
+            <enum name="kf5_sbl_right" value="1"/>
+            <enum name="kf5_sbl_bottom" value="2"/>
+            <enum name="kf5_sbl_all" value="3"/>
         </attr>
-        <attr name="shadow_left" format="reference"/>
-        <attr name="shadow_right" format="reference"/>
-        <attr name="shadow_bottom" format="reference"/>
+        <attr name="kf5_sbl_shadow_left" format="reference"/>
+        <attr name="kf5_sbl_shadow_right" format="reference"/>
+        <attr name="kf5_sbl_shadow_bottom" format="reference"/>
     </declare-styleable>
 
-    <attr name="SwipeBackLayoutStyle" format="reference"/>
+    <attr name="KF5SwipeBackLayoutStyle" format="reference"/>
 
-    <style name="SwipeBackLayout">
-        <item name="edge_size">50dip</item>
-        <item name="shadow_left">@drawable/kf5_shadow_left</item>
-        <item name="shadow_right">@drawable/kf5_shadow_right</item>
-        <item name="shadow_bottom">@drawable/kf5_shadow_bottom</item>
+    <style name="KF5SwipeBackLayout">
+        <item name="kf5_sbl_edge_size">50dip</item>
+        <item name="kf5_sbl_shadow_left">@drawable/kf5_shadow_left</item>
+        <item name="kf5_sbl_shadow_right">@drawable/kf5_shadow_right</item>
+        <item name="kf5_sbl_shadow_bottom">@drawable/kf5_shadow_bottom</item>
     </style>
 
-    <declare-styleable name="MaskImage">
-        <attr name="maskSource" format="enum">
-            <enum name="left" value="0"/>
-            <enum name="right" value="1"/>
+    <declare-styleable name="KF5MaskImage">
+        <attr name="kf5_mi_maskSource" format="enum">
+            <enum name="kf5_mi_left" value="0"/>
+            <enum name="kf5_mi_right" value="1"/>
         </attr>
     </declare-styleable>
 </resources>
