--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_system.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_message_item_with_system.xml
@@ -8,7 +8,7 @@
               android:paddingTop="@dimen/kf5_dimen_8dp">
 
 
-    <TextView
+ <!--   <TextView
         android:id="@+id/kf5_tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:layout_marginTop="@dimen/kf5_dimen_8dp"
         android:background="@drawable/kf5_message_item_with_date_bg"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/kf5_text_size_14"/>
+        android:textSize="@dimen/kf5_text_size_14"/>-->
 
     <TextView
         android:id="@+id/kf5_message_item_system"
