--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_ai_layout.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/layout/kf5_ai_layout.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
+              android:fitsSystemWindows="true"
               android:focusable="true"
               android:focusableInTouchMode="true"
               android:orientation="horizontal"
