--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <resources>
 
-
     <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">false</item>
     </style>
@@ -8,6 +7,7 @@
     <!--&lt;!&ndash; Application theme. &ndash;&gt;-->
     <style name="AppTheme" parent="@style/AppBaseTheme">
         <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowFullscreen">true</item>
         <!--&lt;!&ndash; All customizations that are NOT specific to a particular API-level can go here. &ndash;&gt;-->
     </style>
 
